# calc

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Doxyfile  README.md
.github/workflows/: cmake-multi-platform.yml
cmake/modules/: calc.cmake  calc_add_library.cmake  calc_add_unit_test.cmake  calc_link_libraries.cmake  calc_log.cmake
docs/: README.md
docs/design/: README.md
docs/design/control_flows/: conditionals.md
docs/design/lexical_elements/: overview.md
docs/examples/: Complex.calc  Point.calc  f.calc  fibonacci.calc  hello.calc  point.calc  square.calc  vector.calc
include/calc/: config.h  config.h.in
include/calc/base/: alloc.h  api.h  bits.h  bool.h  byte.h  defs.h  dload.h  errno.h  error.h  file.h  path.h  string.h  utf8.h  utils.h
include/calc/core/: base64.h  hash.h  result.h  sha256.h
include/calc/diagnostic/: diagnostics.h  diagnostics.inc  emitter.h
include/calc/lex/: tokens.h  tokens.inc
include/calc/source/: source_buffer.h  source_location.h  source_stream.h
lib/: CMakeLists.txt
lib/base/: CMakeLists.txt  dload.c  errno.c  error.c  file.c  path.c  string.c  utf8.c  utf8.inc
lib/core/: CMakeLists.txt  base64.c  hash.c  sha256.c
lib/diagnostic/: CMakeLists.txt  diagnostics.c  emitter.c
lib/lex/: CMakeLists.txt  tokens.c
lib/source/: CMakeLists.txt  source_buffer.c  source_stream.c
scripts/: GenHeaderSeparator.py  GenRegionSeparator.py  GenSeparator.py
src/: CMakeLists.txt  main.c
units/: CMakeLists.txt
units/core/: CMakeLists.txt  test_base64.c  test_sha256.c
units/diagnostic/: CMakeLists.txt  test.c  test_diagnostics.c
units/lex/: CMakeLists.txt  test_tokens.c
units/source/: CMakeLists.txt  test_source_buffer.c  test_source_stream.c
